--- a/index.html
+++ b/index.html
@@ -79,11 +79,7 @@ mymenu.style.display="block";
 </br>
 </br>
 </br>
-</br>
-</br>
-<div style="font-size:30px;color:white">Usa el botón PS para salir.</div>
-<br>
-<br>
+<div style="font-size:30px;color:white">Para salir usa el botón PS de tu Control.</div>
 <br>
 <br>
 <br>
