--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 function DLProgress(e){Percent=(Math.round(e.loaded / e.total * 100));window.msgs.innerHTML="Instalando caché offline: " + Percent + "%"};
 function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Caché instalada con éxito!!!";localStorage.isPrbCached=true;},1000);setTimeout(function(){window.msgs.innerHTML="Salga Presionando el botón PS ,desactive el internet y vuelva para cargar el pirateo!!";},3000);}window.applicationCache.addEventListener("progress",DLProgress,false);window.applicationCache.oncached=function(e){DisplayCacheProgress();};window.applicationCache.onupdateready=function(e){DisplayCacheProgress();};
 </script>
-<h1 id=msgs style='font-size:25px;text-align:center;color:white'>Carga Pirata 7.55 by DarkFiveYTB</h1>
+<h1 id=msgs style='font-size:35px;text-align:center;color:white'>Carga Pirata 7.55 by DarkFiveYTB</h1>
 <div id=dlog></div>
 <button style=opacity:0 id="input1" onfocus="handle2()"></button>
 <button style=opacity:0 id="input2"></button>
@@ -60,14 +60,12 @@ mymenu.style.display="block";
 </br>
 </br>
 </br>
-</br>
 <button onMouseOver="msgs.innerHTML='GoldHen - V1.1 '"; onmouseout="msgs.innerHTML='Carga Pirata 7.55 by DarkFiveYTB'" onclick="load_goldhenb(); return false"><img src="hen.png"></button>
 <button onMouseOver="msgs.innerHTML='Orbis Toolbox - v1167 Alpha '"; onmouseout="msgs.innerHTML='Carga Pirata 7.55 by DarkFiveYTB'" onclick="load_orbistoolbox(); return false"><img src="OrbisToolbox.png"></button>
 <button onMouseOver="msgs.innerHTML='Bin Loader '"; onmouseout="msgs.innerHTML='Carga Pirata 7.55 by DarkFiveYTB'" onclick="load_binloader(); return false"><img src="binloader.png"></button>
-><button onMouseOver="msgs.innerHTML='App2 Usb '"; onmouseout="msgs.innerHTML='Carga Pirata 7.55 by DarkFiveYTB'" onclick="load_app2usb(); return false"><img src="app2usb.png"></button>
+<button onMouseOver="msgs.innerHTML='App2 Usb '"; onmouseout="msgs.innerHTML='Carga Pirata 7.55 by DarkFiveYTB'" onclick="load_app2usb(); return false"><img src="app2usb.png"></button>
 <button onMouseOver="msgs.innerHTML='FakeUSB v1.0 '"; onmouseout="msgs.innerHTML='Carga Pirata 7.55 by DarkFiveYTB'" onclick="load_fakeusb() ; return false"><img src="fakeusb.png"></button> 
 <button  onMouseOver="msgs.innerHTML='PS4 Dumper '"; onmouseout="msgs.innerHTML='Carga Pirata 7.55 by DarkFiveYTB'" onclick="load_dumper(); return false"><img src="dumper.png"></button>
-<br>
 <br>
 <br>
 <br>
